--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -25,9 +25,13 @@ http {
 
     # SSL
     ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
-    ssl_protocols               TLSv1.3;
+    ssl_protocols               TLSv1.3 TLSv1.2;
+    ssl_prefer_server_ciphers   on;
+    ssl_ecdh_curve              secp521r1:secp384r1;
+    ssl_ciphers                 EECDH+AESGCM:EECDH+AES256;
     ssl_session_timeout         10m;
     ssl_session_cache           shared:SSL:10m;
+    ssl_buffer_size             16k;
     ssl_session_tickets         off;
     ssl_stapling                on;
     ssl_stapling_verify         on;
