--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,11 +16,15 @@ http {
 
     access_log                  /var/log/nginx/access.log;
 
+    charset                     utf-8;
     sendfile                    on;
     sendfile_max_chunk          1m;
     tcp_nopush                  on;
     tcp_nodelay                 on;
+    types_hash_bucket_size      64;
     keepalive_timeout           65;
+    log_not_found               off;
+    types_hash_max_size         2048;
     server_tokens               off;
 
     # SSL
