--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,10 +29,9 @@ http {
 
     # SSL
     ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
-    ssl_protocols               TLSv1.3 TLSv1.2;
-    ssl_prefer_server_ciphers   on;
-    ssl_ecdh_curve              secp521r1:secp384r1;
-    ssl_ciphers                 EECDH+AESGCM:EECDH+AES256;
+    ssl_protocols               TLSv1.2 TLSv1.3;
+    ssl_ciphers                 ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers   off;
     ssl_session_timeout         10m;
     ssl_session_cache           shared:SSL:10m;
     ssl_buffer_size             16k;
@@ -40,10 +39,8 @@ http {
     ssl_stapling                on;
     ssl_stapling_verify         on;
     ssl_trusted_certificate     /etc/ssl/cert.pem;
-    resolver                    1.1.1.1
-                                1.0.0.1
-                                valid=300s ipv6=off;
-    resolver_timeout            10s;
+    resolver                    1.1.1.1 1.0.0.1 valid=300s ipv6=off;
+    resolver_timeout            3s;
 
     # Compression
     gzip                        on;
@@ -68,6 +65,10 @@ http {
                                 text/css
                                 text/plain
                                 text/xml;
+    
+    # Fast CGI
+    fastcgi_buffers             64 16K;
+    fastcgi_hide_header         X-Powered-By;
 
     include                     /etc/nginx/conf.d/*.conf;
 }
