--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,6 @@
+pid                             /var/run/nginx.pid;
 user                            nginx;
 worker_processes                auto;
-pid                             /var/run/nginx.pid;
 
 error_log                       /var/log/nginx/error.log warn;
 
@@ -26,6 +26,7 @@ http {
     log_not_found               off;
     types_hash_max_size         2048;
     server_tokens               off;
+    client_max_body_size        2M;
 
     # SSL
     ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
@@ -67,7 +68,8 @@ http {
                                 text/xml;
     
     # Fast CGI
-    fastcgi_buffers             64 16K;
+    fastcgi_buffers             8 16K;
+    fastcgi_buffer_size         32k;
     fastcgi_hide_header         X-Powered-By;
 
     include                     /etc/nginx/conf.d/*.conf;
