--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,8 +1,8 @@
-pid                             /var/run/nginx.pid;
 user                            nginx;
 worker_processes                auto;
 
-error_log                       /var/log/nginx/error.log warn;
+error_log                       /var/log/nginx/error.log notice;
+pid                             /var/run/nginx.pid;
 
 events {
     worker_connections          1024;
@@ -14,24 +14,33 @@ http {
     include                     /etc/nginx/mime.types;
     default_type                application/octet-stream;
 
-    access_log                  /var/log/nginx/access.log;
+    log_format                  main
+                                '$remote_addr - $remote_user [$time_local] "$request" '
+                                '$status $body_bytes_sent "$http_referer" '
+                                '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log                  /var/log/nginx/access.log main;
 
     charset                     utf-8;
     sendfile                    on;
     sendfile_max_chunk          1m;
+    aio                         threads;
+    aio_write                   on;
+    directio                    8M;
+    directio_alignment          4k;
     tcp_nopush                  on;
     tcp_nodelay                 on;
     types_hash_bucket_size      64;
-    keepalive_timeout           65;
+    keepalive_timeout           10;
     log_not_found               off;
     types_hash_max_size         2048;
     server_tokens               off;
     client_max_body_size        2M;
 
     # SSL
-    ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
     ssl_protocols               TLSv1.2 TLSv1.3;
-    ssl_ciphers                 ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_ciphers                 ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256;
+    ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
     ssl_prefer_server_ciphers   off;
     ssl_session_timeout         10m;
     ssl_session_cache           shared:SSL:10m;
@@ -66,11 +75,15 @@ http {
                                 text/css
                                 text/plain
                                 text/xml;
-    
+
     # Fast CGI
-    fastcgi_buffers             8 16K;
-    fastcgi_buffer_size         32k;
+    fastcgi_buffers             64 4K;
+    fastcgi_buffer_size         16k;
     fastcgi_hide_header         X-Powered-By;
 
-    include                     /etc/nginx/conf.d/*.conf;
+    # Proxy
+    proxy_buffers               64 4k;
+    proxy_buffer_size           16k;
+
+    include                     /etc/nginx/conf.d/*;
 }
