--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: '3.4'
+version: '3.8'
 
 services:
   nginx:
-    container_name: nginx
     build:
       dockerfile: Dockerfile
       context: .
+      args:
+        - NGINX_VERSION=1.20.2-alpine
+    restart: unless-stopped
     ports:
       - 80:80/tcp
       - 443:443/tcp
