--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
       context: .
       args:
-        - NGINX_VERSION=1.20-alpine
+        - NGINX_VERSION=1.20
     restart: unless-stopped
     environment:
       - NGINX=value
