--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,7 @@
 user                            nginx;
 worker_processes                auto;
 
-error_log                       /var/log/nginx/error.log notice;
+error_log                       /var/log/nginx/error.log warn;
 pid                             /var/run/nginx.pid;
 
 events {
@@ -11,8 +11,10 @@ events {
 }
 
 http {
-    include                     /etc/nginx/mime.types;
+    include                     mime.types;
     default_type                application/octet-stream;
+
+    include                     snippets/charset.conf;
 
     log_format                  main
                                 '$remote_addr - $remote_user [$time_local] "$request" '
@@ -21,63 +23,45 @@ http {
 
     access_log                  /var/log/nginx/access.log main;
 
-    charset                     utf-8;
+    server_tokens               off;
+    keepalive_timeout           20s;
+    client_max_body_size        1M;
+
+    sendfile                    on;
     tcp_nopush                  on;
     tcp_nodelay                 on;
-    types_hash_bucket_size      64;
-    keepalive_timeout           10;
-    log_not_found               off;
-    types_hash_max_size         2048;
-    server_tokens               off;
-    client_max_body_size        2M;
 
-    # SSL
-    ssl_protocols               TLSv1.2 TLSv1.3;
-    ssl_ciphers                 ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256;
-    ssl_dhparam                 /etc/nginx/ssl/keys/dhparam.pem;
-    ssl_prefer_server_ciphers   off;
-    ssl_session_timeout         10m;
-    ssl_session_cache           shared:SSL:10m;
-    ssl_buffer_size             16k;
-    ssl_session_tickets         off;
-    ssl_stapling                on;
-    ssl_stapling_verify         on;
-    ssl_trusted_certificate     /etc/ssl/cert.pem;
-    resolver                    1.1.1.1 1.0.0.1 valid=300s ipv6=off;
+    resolver                    1.1.1.1
+                                1.0.0.1
+                                [2606:4700:4700::1111]
+                                [2606:4700:4700::1001]
+                                valid=60s;
     resolver_timeout            3s;
 
-    # Compression
-    gzip                        on;
-    gzip_vary                   on;
-    gzip_proxied                any;
-    gzip_min_length             256;
-    gzip_comp_level             6;
-    gzip_buffers                32 16k;
-    gzip_http_version           1.1;
-    gzip_types                  application/atom+xml
-                                application/javascript
-                                application/json
-                                application/ld+json
-                                application/rss+xml
-                                application/xhtml+xml
-                                application/xml
-                                application/xspf+xml
-                                font/opentype
-                                image/svg+xml
-                                image/x-icon
-                                image/x-ms-bmp
-                                text/css
-                                text/plain
-                                text/xml;
+    map $sent_http_content_type $referrer_policy {
+        ~*text/(css|html|javascript)|application\/pdf|xml "strict-origin-when-cross-origin";
+    }
 
-    # Fast CGI
-    fastcgi_buffers             64 4K;
-    fastcgi_buffer_size         16k;
-    fastcgi_hide_header         X-Powered-By;
+    map $sent_http_content_type $frame_options {
+        ~*text/html "deny";
+    }
 
-    # Proxy
-    proxy_buffers               64 4k;
-    proxy_buffer_size           16k;
+    map $sent_http_content_type $coep_policy {
+        ~*text/(html|javascript)|application/pdf|xml "require-corp";
+    }
 
-    include                     /etc/nginx/conf.d/*;
+    map $sent_http_content_type $coop_policy {
+        ~*text/(html|javascript)|application/pdf|xml "same-origin";
+    }
+
+    map $sent_http_content_type $corp_policy {
+        ~*text/(html|javascript)|application/pdf|xml "same-origin";
+    }
+
+    include                     snippets/compression.conf;
+    include                     snippets/cache.conf;
+
+    include                     conf.d/*;
 }
+
+include custom.d/*.conf;
