--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   nginx:
-    image: registry.boldis.dev/infrastructure/docker/nginx:1.20-C
+    image: ghcr.io/richardds/nginx
     build:
       dockerfile: Dockerfile
       context: .
