--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,27 +1,44 @@
 name: Docker
 
 on:
+  pull_request:
   push:
     tags:
       - '*'
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
-        matrix:
-          nginx_version: ['1.20', '1.21', '1.22', '1.23']
+      matrix:
+        nginx_version: ['1.20', '1.21', '1.22', '1.23']
+    env:
+      DOCKER_BUILD_ARGS: |
+        NGINX_VERSION=${{ matrix.nginx_version }}
+      DOCKER_TAGS: |
+        richardboldis/nginx-${{ matrix.nginx_version }}:latest
+        richardboldis/nginx-${{ matrix.nginx_version }}:${{ github.ref_name }}
+        ghcr.io/richardds/nginx-${{ matrix.nginx_version }}:latest
+        ghcr.io/richardds/nginx-${{ matrix.nginx_version }}:${{ github.ref_name }}
     steps:
       -
         name: Setup Docker
         uses: docker/setup-buildx-action@v2
       -
+        if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
+        name: Build Docker image
+        uses: docker/build-push-action@v3
+        with:
+          build-args: ${{ env.DOCKER_BUILD_ARGS }}
+      -
+        if: startsWith(github.ref, 'refs/tags/')
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        if: startsWith(github.ref, 'refs/tags/')
         name: Login to GitHub
         uses: docker/login-action@v2
         with:
@@ -29,14 +46,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
       -
-        name: Build and push
+        if: startsWith(github.ref, 'refs/tags/')
+        name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          build-args: |
-            NGINX_VERSION=${{ matrix.nginx_version }}
+          build-args: ${{ env.DOCKER_BUILD_ARGS }}
+          tags: ${{ env.DOCKER_TAGS }}
           push: true
-          tags: |
-            richardboldis/nginx:latest
-            richardboldis/nginx:${{ matrix.nginx_version }}-${{ github.ref_name }}
-            ghcr.io/richardds/nginx:latest
-            ghcr.io/richardds/nginx:${{ matrix.nginx_version }}-${{ github.ref_name }}
